--- a/app-example/app/views/layouts/application.html.erb
+++ b/app-example/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 <%= yield %>
 
 
-  <div class="clear span-24 last" id="footer">© 2010 r3ootb.com</div>
+  <div class="clear span-24 last" id="footer">Released under the MIT license</div>
 </div>
 </body>
 </html>
